JNG-2819 Update versions